# dockerlab

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: images-build.yml  poetry-publish.yml
dockerlab/: .gitignore  __init__.py  asset.py  cli.py  docker-compose.yml  docker.py  template.py  utils.py
dockerlab/assets/: Makefile  docker-compose.yml  docker.py  requirements.txt
dockerlab/docker/: Dockerfile  Dockerfile.full
dockerlab/docker/misc/: init_workspace
dockerlab/post_templates/: default.txt  node.txt  python.txt
dockerlab/templates/: README.md  default  settting.py
dockerlab/templates/runtime_node_lts/: Dockerfile
dockerlab/templates/workspace_base/: Dockerfile
dockerlab/templates/workspace_cuda_11_1/: Dockerfile
dockerlab/templates/workspace_cuda_11_3/: Dockerfile
dockerlab/templates/workspace_cuda_11_7/: Dockerfile
dockerlab/templates/workspace_cuda_11_8/: Dockerfile
dockerlab/templates/workspace_cuda_12_1/: Dockerfile
dockerlab/templates/workspace_node_16/: Dockerfile
dockerlab/templates/workspace_node_18/: Dockerfile
dockerlab/templates/workspace_node_20/: Dockerfile
dockerlab/templates/workspace_protein/: Dockerfile
dockerlab/templates/workspace_pytorch_1_13/: Dockerfile
dockerlab/templates/workspace_pytorch_2_0/: Dockerfile
dockerlab/templates/workspace_pytorch_2_1/: Dockerfile
dockerlab/templates/workspace_pytorch_2_2/: Dockerfile
dockerlab/templates/worspace_pytorch_2_1/: Dockerfile
