[tool.poetry]
name = "dockerlab"
version = "0.0.0"
description = "Build a docker container as your workspace."
homepage = "https://github.com/hughplay/dockerlab"
authors = ["Mr.Blue <silverhugh.77@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
toml = "^0.10.2"
docker = "^5.0.0"

[tool.poetry.scripts]
dockerlab = "dockerlab.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
